<resources>
    <string name="app_name">Путеводитель по МИФИ</string>
    <string name="app_version">2.0</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    <string name="title_home">Новости</string>
    <string name="title_reminder">Памятка</string>
    <string name="title_navigation">Навигация</string>
    <string name="title_qr">QR-код</string>
    <string name="title_telephony">Телефонная книга</string>
    <string name="title_options">Параметры</string>

    <string name="text_options_about">О приложении</string>
    <string name="text_options_theme">Тема</string>
    <string name="text_options_support">Техподдержка</string>
    <string name="text_theme_warning">(При смене темы приложение будет перезапущено)</string>
    <string name="text_news_all">Все</string>
    <string name="text_news_forme">Для меня</string>
    <string name="text_reminder_all">Отображать все</string>
    <string name="text_reminder_notdone">Отображать невыполненные</string>

    <string name="lem_loading">Загрузка…</string>
    <string name="lem_error">Ошибка загрузки данных! Проверьте подключение к Интернету!</string>

    <string name="scanner_error">Разрешите доступ к камере, чтобы отсканировать QR-код</string>
    <string name="wrong_qr">Данный QR-код не является QR-кодом аудитории или отсутствует подключение к Интернету. Содержимое QR-кода:</string>

    <string name="telephony_hint">Нажмите на любой из контактов и номер будет автоматически скопирован на экран набора</string>

    <string name="logs_hint">Для повышения качества обработки обращений в техподдержку, а также для
    последующей отладки и усовершенствования приложения Вы можете отправить log-файл,
    в котором содержится отладочная информация. Это настоятельно реомендуется
    сделать, если Вы столкнулись с нестабильной работой приложения. Со стороны разработчика
    подтверждаю, что в файле не содержится никаких Ваших личных данных, лишь информация,
    связанная с работой данного приложения.</string>

    <string name="web_start">
        <![CDATA[
        <html>
        <head></head>
        <body style="text-align:justify;color:black;background-color:rgba(250, 250, 250, 0);">
        ]]>
        </string>
    <string name="web_end">
        <![CDATA[
        </body>
        </html>
        ]]>
    </string>

    <string name="link_base">http://194.87.232.95:45555/home/</string>


</resources>
