<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mephiguide.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.example.mephiguide.ui.dashboard.ReminderFragment"
        android:label="@string/title_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_navigation"
        android:name="com.example.mephiguide.ui.notifications.NavigationFragment"
        android:label="@string/title_navigation"
        tools:layout="@layout/fragment_navigation" />

    <fragment
        android:id="@+id/navigation_qr"
        android:name="com.example.mephiguide.ui.qr.QrFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_qr" />
    <fragment
        android:id="@+id/navigation_telephony"
        android:name="com.example.mephiguide.ui.telephony.TelephonyFragment"
        android:label="@string/title_telephony"
        tools:layout="@layout/fragment_telephony" />
    <fragment
        android:id="@+id/navigation_options"
        android:name="com.example.mephiguide.ui.options.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />
</navigation>